<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrawerActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="138dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:layout_constraintBottom_toTopOf="@+id/button_chinese_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:title="@string/title_drawer"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/button_chinese_drawer"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:left="82dp"
        android:radius="5dp"
        android:text="@string/btn_chinese"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:top="148dp"
        app:layout_constraintBottom_toTopOf="@+id/button_math_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button_math_drawer"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:left="82dp"
        android:radius="5dp"
        android:text="@string/btn_math"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:top="148dp"
        app:layout_constraintBottom_toTopOf="@+id/button_english_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_chinese_drawer" />

    <Button
        android:id="@+id/button_english_drawer"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:left="82dp"
        android:radius="5dp"
        android:text="@string/btn_english"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:top="148dp"
        app:layout_constraintBottom_toTopOf="@+id/button_history_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_math_drawer" />

    <Button
        android:id="@+id/button_history_drawer"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:left="82dp"
        android:radius="5dp"
        android:text="@string/btn_history"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:top="148dp"
        app:layout_constraintBottom_toTopOf="@+id/button_politics_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_english_drawer" />

    <Button
        android:id="@+id/button_politics_drawer"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:gravity="center"
        android:left="82dp"
        android:radius="5dp"
        android:text="@string/btn_politics"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:top="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_history_drawer" />


</android.support.constraint.ConstraintLayout>